objects/Academy_Certification__c.object
<CustomObject>
    <description>Academy Certification per student</description>
    <fields>
        <fullName>Certification_Examination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification Examination</label>
        <referenceTo>Academy_Certification_Examination__c</referenceTo>
        <relationshipLabel>Academy Certifications</relationshipLabel>
        <relationshipName>Academy_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Id__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Certification Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Certification_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification Program</label>
        <referenceTo>Academy_Certification_Program__c</referenceTo>
        <relationshipLabel>Academy Certifications</relationshipLabel>
        <relationshipName>Academy_Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification Student</label>
        <referenceTo>Academy_Certification_Student__c</referenceTo>
        <relationshipLabel>Academy Certifications</relationshipLabel>
        <relationshipName>Academy_Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact.</description>
        <inlineHelpText>Lookup to contact.</inlineHelpText>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academy Certifications</relationshipLabel>
        <relationshipName>Certifications_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earned_Date__c</fullName>
        <description>Earned date of Certification. Comes from first Examination Date</description>
        <label>Earned Date</label>
        <summarizedField>Academy_Certification_Examination__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Academy_Certification_Examination__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Academy_Certification_Examination__c.Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Academy_Certification_Examination__c.Academy_Certification2__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date of certification based on approved Examination date.</description>
        <formula>IF(ISBLANK(Certification_Examination__r.Date__c),TODAY()-1,
	(DATE(YEAR( DATEVALUE(Certification_Examination__r.Date__c)) + 1,
			MONTH(DATEVALUE(Certification_Examination__r.Date__c)), 
				DAY(DATEVALUE(Certification_Examination__r.Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Certification_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Certification_Student__r.Contact__r.FirstName + &apos; &apos;+ &apos; &apos;+  Certification_Student__r.Contact__r.LastName</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <label>Academy Certification</label>
    <listViews>
        <fullName>Administrator</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Student_Name__c</columns>
        <columns>Certification_Student__c</columns>
        <columns>Status__c</columns>
        <columns>Certification_Examination__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification_Program__c</field>
            <operation>equals</operation>
            <value>Administrator</value>
        </filters>
        <label>Administrator</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Student_Name__c</columns>
        <columns>Certification_Student__c</columns>
        <columns>Status__c</columns>
        <columns>Certification_Examination__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Consultant</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Student_Name__c</columns>
        <columns>Certification_Student__c</columns>
        <columns>Status__c</columns>
        <columns>Certification_Examination__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification_Program__c</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filters>
        <label>Consultant</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Developer</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Student_Name__c</columns>
        <columns>Certification_Student__c</columns>
        <columns>Status__c</columns>
        <columns>Certification_Examination__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification_Program__c</field>
            <operation>equals</operation>
            <value>Developer</value>
        </filters>
        <label>Developer</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ACD-{000000}</displayFormat>
        <label>Academy Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>